# mnist

./: CLAUDE.md  README.md  mnist_classification.ipynb  pyproject.toml
.claude/: settings.local.json
docs/: PLANNING.md  PRD.md  TASKS.md
results/: classification_report_exp1.txt  classification_report_exp2.txt  classification_report_exp3.txt  classification_report_exp4.txt
tests/: test_evaluation.py  test_model.py  test_preprocessing.py
